@@ -55,6 +55,8 @@ typedef enum joystick_type_t {
 #define JOYSTICK_TYPE_COUNT 7
 
 extern const char *joystick_name[];
+extern const char *joystick_connection[];
+#define JOYSTICK_CONN_COUNT 4
 
 typedef enum joystick_button {
 
